Adds url to project description

--- a/student.ipynb
+++ b/student.ipynb
@@ -12,7 +12,7 @@
     "* Student pace: Full time\n",
     "* Scheduled project review date/time: 28th May 2023\n",
     "* Instructor name: Veronica Isiaho\n",
-    "* Blog post URL:\n"
+    "* Blog post URL: https://github.com/JacintaMukii/Phase_1_project \n"
    ]
   },
   {
